# sshop

./: .clang-format  CMakeLists.txt  README.md  client.c  main.c  server.c
cmake/Modules/: DefineCompilerFlags.cmake
tests/: CMakeLists.txt
